--- a/correlaciones.ipynb
+++ b/correlaciones.ipynb
@@ -127,14 +127,14 @@
     "                               min=0,\n",
     "                               max=1.5,\n",
     "                               step=.01,\n",
-    "                               description='Error',\n",
+    "                               description='Dispersión',\n",
     "                               readout_format='.2f')\n",
     "\n",
     "transparencia=widgets.FloatSlider(value=0.5,\n",
     "                                  min=0,\n",
     "                                  max=1,\n",
     "                                  step=.01,\n",
-    "                                  description='Color',\n",
+    "                                  description='Transparencia',\n",
     "                                  readout_format='.2f')\n",
     "\n",
     "out = widgets.interactive_output(ran_scatter, {'x_med': x_med, \n",
